syntax = "proto3";

package wpb;

message WxAccount {
    string wxId = 1; //微信ID
    string wxAlias = 2; //微信号
    string nickname = 3; //昵称
    string remark = 4; //备注名称
    string headImg = 5; // 头像
    int32 sex = 6; //性别
    string country = 7; //国籍
    string province = 8; //省份
    string city = 9; //城市
}

message WxClient {
    string wxId = 1;      //微信ID
    string wxAlias = 2;   // 微信别名
    string ipAddr = 3;    // ip地址
    string version = 4;   //版本号
    int32 status = 5;   // 在线 离线状态
    string nickname = 6;  //微信昵称
}

message WxFriend {
    string wxId = 1;
    string wxAlias = 2;
    string nickname = 3; //昵称
    string remarkName = 4; //备注名称
    string headImg = 5; // 头像
    int32 sex = 6; //性别
    string country = 7; //国籍
    string province = 8; //省份
    string city = 9; //城市
    string labelId = 10; //标签id
}

message WxGroup {
    string groupId = 1;  // 群号
    string groupName = 2;  // 群名
    string groupHeadImg = 3; // 群头像
    string ownerId = 4;  // 群主
}

message WxFriendApply {
    string fromWxId = 1;
    string content = 2;
    string ticket = 3;   // 凭证
    int32 status = 4;   // 状态: 0 待处理 1 通过 2忽略
    string nickname = 5;
    string headImg = 6;
    int64 time = 7;
}

message WxAccountDetail {
    WxAccount account = 1;
    WxClient client = 2;
}

message WxClients {
    string ipAddr = 1;
    repeated WxClient clients = 2;
}

//获取系统微信账号列表
message GetWxAccountListRequest {
    int32 start = 1;
    int32 limit = 2;
}

message GetWxAccountListResponse {
    repeated WxAccountDetail list = 1;
    int32 nextId = 2;
}

// 获取好友列表
message GetWxFriendListRequest {
    int32 start = 1;
    int32 limit = 2;
}

message GetWxFriendListResponse {
    repeated WxFriend list = 1;
    int32  nextId = 2;
}

// 获取群列表
message GetWxGroupListRequest {
    int32 start = 1;
    int32 limit = 2;
}

message GetWxGroupListResponse {
    repeated WxGroup list = 1;
    int32 nextId = 2;
}

// 获取好友申请列表
message GetWxFriendApplyListRequest {
    int32 start = 1;
    int32 limit = 2;
}

message GetWxFriendApplyListResponse {
    repeated WxFriendApply list = 1;
    int32 nextId = 2;
}

// 同意好友申请
message AgreeFriendApplyRequest {
    string fromWxId = 1;
    string ticket = 2;
}

message AgreeFriendApplyResponse {
}

// 获取账号详情
message GetAccountDetailRequest {
}

message GetAccountDetailResponse {
    WxAccountDetail detail = 1;
}

// 搜索好友列表
message SearchWxFriendListRequest {
    int32 start = 1;
    int32 limit = 2;
    string q = 3;
}

message SearchWxFriendListResponse {
    repeated WxFriend list = 1;
}

// 获取客户端列表
message GetWxClientListRequest {
    int32 start = 1;
    int32 limit = 2;
}

message GetWxClientListResponse {
    repeated WxClients list = 1;
    int32 nextId = 2;
}

// 重启客户端
message RestartWxClientRequest {
}

message RestartWxClientResponse {
}