syntax = "proto3";

package wpb;


message GetLoginQrcodeRequest {
}

message GetLoginQrcodeResponse {
    bytes code = 1;
}

message GetLoginStatusRequest {
}

message GetLoginStatusResponse {
    int32 status = 1;
    string wxId = 2;
}

message CheckLoginQrcodeRequest {
}

message CheckLoginQrcodeResponse {
    string wxId = 1;
    int32 status = 2;
    string nickName = 3;
    string headImg = 4;
    int32 expiredTime = 5;
}